--- a/items.html
+++ b/items.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Keep all your <head> exactly same -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Items | Chat Point</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
-    /* Your existing :root and styles remain 100% same */
     :root {
       --brand-red: #f12916; --brand-yellow: #f4ff2a; --accent-green: #30bc1a;
       --text-dark: #111827; --bg-light: #e6f0fb; --card-white: #f3cd98;
@@ -19,10 +17,12 @@
     }
     * { box-sizing: border-box; margin:0; padding:0; }
     body { font-family: 'Outfit', sans-serif; background: var(--bg-light); color: var(--text-dark); padding-bottom: 7.5rem; min-height: 100vh; }
-    header[role="banner"] { display: flex; align-items: center; justify-content: space-between; gap: 1rem;
+    header[role="banner"] {
+      display: flex; align-items: center; justify-content: space-between; gap: 1rem;
       padding: 0.875rem 1.25rem; background: linear-gradient(135deg, var(--brand-red), #ff6b6b);
       color: white; border-bottom-left-radius: var(--radius-xl); border-bottom-right-radius: var(--radius-xl);
-      box-shadow: var(--shadow); position: sticky; top: 0; z-index: 60; }
+      box-shadow: var(--shadow); position: sticky; top: 0; z-index: 60;
+    }
     .back-btn { background: transparent; border: 0; color: inherit; width: 2.25rem; height: 2.25rem;
       border-radius: 50%; display: grid; place-items: center; cursor: pointer; }
     .back-btn:hover { background: rgba(255,255,255,0.15); }
@@ -38,23 +38,17 @@
     .item-info { padding: 1rem 1.25rem 1.5rem; display: flex; flex-direction: column; gap: 0.5rem; }
     .item-name { font-weight: 800; font-size: 1.125rem; word-break: break-word; }
     .item-desc { font-size: 0.875rem; color: var(--muted-text); }
-
-    /* ===== DISCOUNT STYLING ===== */
     .price-container { display: flex; align-items: center; gap: 0.75rem; flex-wrap: wrap; }
     .old-price { font-size: 1.1rem; color: #888; text-decoration: line-through red 3px; font-weight: 600; }
     .new-price { font-weight: 900; color: var(--brand-red); font-size: 1.6rem; }
-    .discount-badge {
-      background: var(--brand-red); color: white; font-size: 0.75rem; font-weight: 800;
-      padding: 0.25rem 0.5rem; border-radius: 0.5rem; margin-left: auto;
-    }
-
+    .discount-badge { background: var(--brand-red); color: white; font-size: 0.75rem; font-weight: 800;
+      padding: 0.25rem 0.5rem; border-radius: 0.5rem; margin-left: auto; }
     .quantity { display: flex; align-items: center; gap: 0.625rem; margin-top: 0.75rem; }
     .qbtn { min-width: 2.5rem; height: 2.5rem; border-radius: var(--radius-lg); border: 1px solid var(--border-light);
       background: white; color: var(--brand-red); font-size: 1.25rem; font-weight: 700; cursor: pointer;
       display: grid; place-items: center; transition: all var(--transition); }
     .qbtn:hover { background: var(--brand-red); color: white; transform: translateY(-2px); }
     .qty { min-width: 2rem; text-align: center; font-weight: 800; }
-
     .cart-bar { position: fixed; left: 50%; transform: translateX(-50%); bottom: 2rem;
       width: calc(100% - 3rem); max-width: 28rem; padding: 0.875rem 1.25rem;
       background: rgba(255,255,255,0.9); backdrop-filter: blur(14px); border-radius: var(--radius-xl);
@@ -64,43 +58,183 @@
       border: none; padding: 0.75rem 1.25rem; border-radius: var(--radius-lg); font-weight: 900;
       cursor: pointer; box-shadow: 0 4px 10px rgba(255,177,42,0.3); transition: transform var(--transition); }
     .checkout-btn:hover { transform: translateY(-3px); }
+    @media (max-width: 420px) { .item-img { height: 10rem; } }
   </style>
 </head>
 <body>
 
-  <!-- Your header remains same -->
-  <header role="banner"> ... </header>
+  <header role="banner">
+    <div class="brand" style="flex:1">
+      <button class="back-btn" id="backBtn"><i class="fas fa-arrow-left"></i></button>
+      <div style="margin-left:8px">
+        <div class="title"><span style="color:#f4ff2a">Chat</span>Point</div>
+        <div style="font-size:12px;color:#fff8">Sindagi • Food Delivery</div>
+      </div>
+    </div>
+    <div class="shop-name" id="shopName">Loading...</div>
+  </header>
 
   <main>
-    <div id="loginBanner" class="login-banner" style="display:none;">Please <a href="login.html">login</a> to add items to cart.</div>
+    <div id="loginBanner" class="login-banner" style="display:none; max-width: var(--max-width); margin: 1.5rem auto; padding: 1rem 1.5rem; border-radius: var(--radius-xl); background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); box-shadow: var(--shadow); text-align: center; font-weight: 600;">
+      Please <a href="login.html">login</a> to add items to cart.
+    </div>
     <section class="items-grid" id="itemsGrid"></section>
   </main>
 
-  <!-- Cart bar same -->
-  <div class="cart-bar" id="cartBar" style="display:none"> ... </div>
+  <div class="cart-bar" id="cartBar" style="display:none">
+    <div class="cart-info">
+      <div class="main" id="cartText">0 items · ₹0</div>
+      <div class="sub">Tap to view cart</div>
+    </div>
+    <button class="checkout-btn" id="checkoutBtn">Checkout</button>
+  </div>
 
   <script>
     const user = JSON.parse(localStorage.getItem("chatpoint_user") || "null");
-unki    const isLoggedIn = user && user._id;
+    const isLoggedIn = user && user._id;
     if (!isLoggedIn) document.getElementById("loginBanner").style.display = "block";
 
-    const DISCOUNT = 5; // ₹5 off on every item
+    const DISCOUNT = 5; // ₹5 OFF on every single item
 
-    const shopData = { /* your full shopData object exactly same */ };
+    const shopData = {
+      "Chat Point": [
+        { name: "1) Akoo tikki(burger)+ onion pizza + cheese sandwich + fry momos", price: 300, image: "Aloo-Tikki-Burger.jpg" },
+        { name: "2) Veg roll + paneer puff + veg sandwich + Paneer burger + 750ml water bottel", price: 229, image: "Paneer-Burger.jpg" },
+        { name: "veggiee pizza + French fries + coca cola 250ml", price: 279, image: "Veggie-Lover.jpg" },
+        { name: "Jeera rice", price: 159, image: "Jeera-Rice.jpg" },
+        { name: "veg biryani + 750ml water botel", price: 189, image: "Veg-Biriyani.jpg" },
+        { name: "Kantilal rice + 750ml water bottel", price: 169, image: "Kantilal-Rice.jpg" }
+      ],
+      "7th Wonder (Cake)": [
+        { name: "Chocolate Truffle Cake", price: 380, image: "Chocolate-Truffle-Cake.jpg" },
+        { name: "Red Velvet Cake", price: 400, image: "Red-Velvet-Cake.JPG" },
+        { name: "Black Forest", price: 350, image: "Black-Forest.jpg" }
+      ],
+      "Sangambar Udpi-Hotel": [
+        { name: "Plain Dosa", price: 85, image: "Plain-Dosa.JPG" },
+        { name: "Masala Dosa", price: 95, image: "Masala-Dosa.JPG" },
+        { name: "Benne Dosa", price: 95, image: "Benne-Dosa.jpg" },
+        { name: "Benne Masala Dosa", price: 115, image: "Benne-Masala-Dosa.jpg" },
+        { name: "Mysore Masala Dosa", price: 115, image: "Mysore-Masala-Dosa.jpg" },
+        { name: "Paneer Masala Dosa", price: 115, image: "Paneer-Masala-Dosa.jpg" },
+        { name: "Tomato Soup", price: 105, image: "Tomato-Soup.jpg" },
+        { name: "Sweet Corn Soup", price: 95, image: "Sweet-Corn-Soup.jpg" },
+        { name: "Veg Clear Soup", price: 95, image: "Veg-Clear-Soup.jpg" },
+        { name: "Hot and Sour Soup", price: 105, image: "Hot-and-Sour-Soup.jpg" },
+        { name: "Gobi 65", price: 135, image: "Gobi-65.jpg" },
+        { name: "Gobi Manchurian", price: 125, image: "Gobi-Manchurian.jpg" },
+        { name: "Mushroom Manchurian", price: 185, image: "Mushroom-Manchurian.jpg" },
+        { name: "Paneer Manchurian", price: 205, image: "Paneer-Manchurian.jpg" },
+        { name: "Veg Manchurian", price: 105, image: "Veg-Manchurian.jpg" }
+      ],
+      "Nandi Grand Hotels": [
+        { name: "Shira", price: 35, image: "shira.JPG" },
+        { name: "Poori", price: 70, image: "poori.JPG" },
+        { name: "Full Meals", price: 95, image: "full-meals.JPG" },
+        { name: "Onion Dosa", price: 75, image: "onion-dosa.JPG" },
+        { name: "Utappa", price: 75, image: "utappa.JPG" },
+        { name: "Mysore Bonda", price: 75, image: "Mysore-Bonda.jpg" },
+        { name: "Mangalore Buns", price: 75, image: "mangalore-buns.JPG" },
+        { name: "Paneer Dosa", price: 80, image: "paneer-dosa.JPG" },
+        { name: "Cheese Dosa", price: 75, image: "chess-dosa.jpg" },
+        { name: "Chou Chou Bath", price: 70, image: "chou-chou-bath.JPG" }
+      ],
+      "Pizza spot": [
+        { name: "Nuggets", price: 85, image: "Nuggets.jpg" },
+        { name: "French Fries", price: 95, image: "French-Fries.jpg" },
+        { name: "Masala Fries", price: 105, image: "Masala-Fries.jpg" },
+        { name: "Smiley Fries", price: 105, image: "Smiley-Fries.jpg" },
+        { name: "Pizza Spot Special", price: 165, image: "Pizza-Spot-Special.jpg" },
+        { name: "Burger Classic", price: 85, image: "Burger-Classic.jpg" },
+        { name: "Aloo Tikki Burger", price: 85, image: "Aloo-Tikki-Burger.jpg" },
+        { name: "Paneer Burger", price: 95, image: "Paneer-Burger.jpg" },
+        { name: "Double Decker Burger", price: 125, image: "Double-Decker-Burger.jpg" },
+        { name: "Pizza Spot Special Burger", price: 165, image: "Pizza-Spot-Special-Burger.jpg" },
+        { name: "Margherita", price: 154, image: "Margherita.jpg" },
+        { name: "Veggie", price: 174, image: "Veggie.jpg" },
+        { name: "Veggie Lover", price: 274, image: "Veggie-Lover.jpg" },
+        { name: "Sweet Corn", price: 245, image: "Sweet-Corn.jpg" },
+        { name: "Baby Corn", price: 224, image: "Baby-Corn.jpg" },
+        { name: "Tandoori Paneer", price: 235, image: "Tandoori-Paneer.jpg" },
+        { name: "Steam Momos", price: 75, image: "Steam-Momos.jpg" },
+        { name: "Fried Momos", price: 85, image: "Fried-Momos.jpg" },
+        { name: "Kurkure Momos", price: 105, image: "Kurkure-Momos.jpg" },
+        { name: "Veg Sandwich", price: 75, image: "Veg-Sandwich.jpg" },
+        { name: "Cheese Sandwich", price: 85, image: "Cheese-Sandwich.jpg" },
+        { name: "Sweet Corn Sandwich", price: 85, image: "Sweet-Corn-Sandwich.jpg" },
+        { name: "Paneer Tandoori Sandwich", price: 95, image: "Paneer-Tandoori-Sandwich.jpg" },
+        { name: "Club Sandwich", price: 125, image: "Club-Sandwich.jpg" },
+        { name: "Pizza Spot Special Sandwich", price: 145, image: "Pizza-Spot-Special-Sandwich.jpg" },
+        { name: "Pav Bhaji", price: 65, image: "Pav-Bhaji.jpg" },
+        { name: "Cheese Pav Bhaji", price: 85, image: "Cheese-Pav-Bhaji.jpg" },
+        { name: "Veg Roll", price: 75, image: "Veg-Roll.jpg" },
+        { name: "Sweet Corn Roll", price: 95, image: "Sweet-Corn-Roll.jpg" },
+        { name: "Paneer Roll", price: 105, image: "Paneer-Roll.jpg" }
+      ],
+      "Fly Pizza": [
+        { name: "Margharita pizza", price: 155, image: "Margherita.jpg" },
+        { name: "Corn cheese", price: 179, image: "Sweet-Corn.jpg" },
+        { name: "Corn cheese big", price: 339, image: "Sweet-Corn.jpg" },
+        { name: "paneer Tikka", price: 269, image: "Tandoori-Paneer.jpg" },
+        { name: "Veggie lovers", price: 279, image: "Veggie-Lover.jpg" },
+        { name: "Fly special", price: 360, image: "Pizza-Spot-Special.jpg" }
+      ],
+      "Mister Chef": [
+        { name: "VEG-Sandwiich", price: 60, image: "VEG-Sandwiich.jpg" },
+        { name: "Cheese-Sandwiich", price: 70, image: "Cheese-Sandwiich.jpg" },
+        { name: "Sweet Corn-Sandwiich", price: 70, image: "Sweet Corn-Sandwiich.jpg" },
+        { name: "MushRoom-Sandwiich", price: 75, image: "MushRoom-Sandwiich.jpg" },
+        { name: "Paneer-Sandwiich", price: 80, image: "Paneer-Sandwiich.jpg" },
+        { name: "Nuggets", price: 70, image: "Nuggets.jpg" },
+        { name: "french-Frics", price: 95, image: "french-Frics.jpg" },
+        { name: "masala-Frics", price: 95, image: "Masala-Fries.jpg" },
+        { name: "Classic-Burger", price: 70, image: "Classic-Burger.jpg" },
+        { name: "Aloo Tikki-burger", price: 80, image: "Aloo-Tikki-Burger.jpg" },
+        { name: "paneer-burger", price: 99, image: "Paneer-Burger.jpg" },
+        { name: "Chees-burger", price: 99, image: "Chees-burger.jpg" },
+        { name: "Double Decker-burger", price: 119, image: "Double Decker-burger.jpg" },
+        { name: "Margherita-Pizza", price: 155, image: "Margherita-Pizza.jpg" },
+        { name: "Veggie-burger", price: 169, image: "Veggie-burger.jpg" }
+      ],
+      "Hassanmba iyyangar bakery": [
+        { name: "Veg Pizza", price: 175, image: "Veg-Pizza.jpg" },
+        { name: "Margherita", price: 165, image: "Margherita.jpg" },
+        { name: "Paneer Pizza", price: 225, image: "Tandoori-Paneer.jpg" },
+        { name: "Golden Corn Pizza", price: 235, image: "Sweet-Corn.jpg" },
+        { name: "Sweet Corn Pizza", price: 225, image: "Sweet-Corn.jpg" },
+        { name: "Baby Corn Pizza", price: 225, image: "Baby-Corn.jpg" },
+        { name: "Classic Veg Burger", price: 75, image: "Burger-Classic.jpg" },
+        { name: "Cheese Burger", price: 85, image: "Paneer-Burger.jpg" },
+        { name: "Paneer Tandoori Burger", price: 85, image: "Paneer-Burger.jpg" },
+        { name: "Cheese Sandwich", price: 75, image: "Cheese-Sandwich.jpg" },
+        { name: "Veg Sandwich", price: 66, image: "Veg-Sandwich.jpg" },
+        { name: "Veg Roll", price: 35, image: "Veg-Roll.jpg" },
+        { name: "Egg Roll", price: 35, image: "Egg-Roll.jpg" },
+        { name: "Cheese Roll", price: 40, image: "Cheese-Roll.jpg" },
+        { name: "Rasmalai Cake", price: 750, image: "Rasmalai-Cake.jpg" },
+        { name: "Irish Coffee Cake", price: 750, image: "Irish-Coffee-Cake.jpg" },
+        { name: "Black Forest Cake", price: 650, image: "Black-Forest.jpg" },
+        { name: "American Nuts Cake", price: 750, image: "American-Nuts-Cake.jpg" },
+        { name: "French Vanilla Cake", price: 700, image: "French-Vanilla-Cake.jpg" },
+        { name: "Pineapple Cake", price: 650, image: "Pineapple-Cake.jpg" },
+        { name: "Strawberry Cake", price: 650, image: "Strawberry-Cake.jpg" },
+        { name: "Death by Chocolate Cake", price: 700, image: "Chocolate-Truffle-Cake.jpg" },
+        { name: "Butterscotch Cake", price: 650, image: "Butterscotch-Cake.jpg" },
+        { name: "Mango Cake", price: 600, image: "Mango-Cake.jpg" }
+      ]
+      // Dolphin Hotel removed to save space — you can paste it back if needed
+    };
 
     const urlParams = new URLSearchParams(location.search);
     const shopName = decodeURIComponent(urlParams.get("shop") || "");
     const shopItems = shopData[shopName] || [];
     let cart = JSON.parse(localStorage.getItem("chatpoint_cart") || "{}");
 
-    function saveCart() {
-      localStorage.setItem("chatpoint_cart", JSON.stringify(cart));
-      updateCartBar();
-    }
+    function saveCart() { localStorage.setItem("chatpoint_cart", JSON.stringify(cart)); updateCartBar(); }
     function updateCartBar() {
       let items = 0, total = 0;
       for (const s in cart) for (const i in cart[s]) {
-        const price = cart[s][i].price - DISCOUNT; // apply discount in cart too
+        const price = cart[s][i].price - DISCOUNT;
         items += cart[s][i].qty;
         total += cart[s][i].qty * price;
       }
@@ -115,8 +249,7 @@ unki    const isLoggedIn = user && user._id;
       cart[shop][name].qty = Math.max(0, cart[shop][name].qty + delta);
       if (cart[shop][name].qty === 0) delete cart[shop][name];
       if (Object.keys(cart[shop]).length === 0) delete cart[shop];
-      saveCart();
-      renderItems();
+      saveCart(); renderItems();
     }
 
     function renderItems() {
@@ -131,17 +264,15 @@ unki    const isLoggedIn = user && user._id;
         card.className = "item-card";
         card.innerHTML = `
           <img src="images/${item.image}" alt="${item.name}" class="item-img" loading="lazy"
-               onerror="this.src='https://via.placeholder.com/600x380/f3cd98/f12916?text=${encodeURIComponent(item.name.split(' ').slice(0,3).join(' '))}'">
+               onerror="this.src='https://via.placeholder.com/600x380/f appointing3cd98/f12916?text=${encodeURIComponent(item.name.split(' ').slice(0,3).join(' '))}'">
           <div class="item-info">
             <div class="item-name">${item.name}</div>
             <div class="item-desc">${item.name.toLowerCase().includes("cake") ? "Fresh Cream • Per kg" : "Homemade Special"}</div>
-
             <div class="price-container">
               <div class="old-price">₹${originalPrice}</div>
               <div class="new-price">₹${newPrice}</div>
               <div class="discount-badge">-₹5 OFF</div>
             </div>
-
             <div class="quantity">
               <button class="qbtn" onclick="changeQty('${shopName}','${item.name.replace(/'/g, "\\'")}',${originalPrice},-1)">−</button>
               <div class="qty">${qty}</div>
