--- a/delivery.html
+++ b/delivery.html
@@ -21,6 +21,7 @@
       --danger: #ef4444;
       --confirmed: #1e40af;
       --confirmed-light: #93c5fd;
+      --whatsapp: #25D366;
     }
     body {
       font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
@@ -80,6 +81,16 @@
     .btn-success:hover { background: #059669; }
     .btn-danger { background: var(--danger); color: white; }
     .btn-danger:hover { background: #dc2626; }
+    .btn-whatsapp {
+      background: var(--whatsapp); color: white; font-size: 0.85rem; padding: .5rem .9rem;
+    }
+    .btn-whatsapp:hover { background: #128C7E; }
+
+    .user-card {
+      display: flex; justify-content: space-between; align-items: center;
+      padding: 1rem; background: var(--card-bg); border-radius: 0.75rem;
+      margin-bottom: 0.8rem; border: 1px solid var(--border);
+    }
 
     .badge {
       display: inline-block; padding: .3rem .8rem; font-size: .8rem;
@@ -106,7 +117,6 @@
     h1 { font-size: 1.8rem; font-weight: 700; display: flex; align-items: center; gap: .5rem; }
     h1 svg { color: var(--primary); }
 
-    /* FULL SCREEN ALERT */
     .new-order-alert {
       position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
       background: rgba(239, 68, 68, 0.98); color: white; z-index: 99999;
@@ -128,13 +138,10 @@
 
   <svg id="icon-sprite" xmlns="http://www.w3.org/2000/svg">
     <symbol id="i-truck" viewBox="0 0 24 24"><path d="M18 7h-3V4a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h1.5a2.5 2.5 0 0 0 5 0h3a2.5 2.5 0 0 0 5 0H21a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1zm-2 9h-2v-2h2v2zm-5 0h-2v-2h2v2zm-5 0H4V9h2v7zm0-9H4V5h2v3zm5 0H9V5h2v3zm5 0h-2V5h2v3z"/></symbol>
-    <symbol id="i-check" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></symbol>
-    <symbol id="i-times" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></symbol>
-    <symbol id="i-refresh" viewBox="0 0 24 24"><path d="M17.65 6.35A7.958 7.958 0 0 0 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0 1 12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/></symbol>
-    <symbol id="i-logout" viewBox="0 0 24 24"><path d="M16 13v-2H7V9l-5 3 5 3v-2zm5-8h-9c-1.1 0-2 .9-2 2v2h2V7h9v10h-9v-2H8v2c0 1.1.9 2 2 2h9c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2z"/></symbol>
+    <symbol id="i-whatsapp" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.297-.497.099-.198.05-.371-.025-.52-.074-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.417-5.011 9.956 9.956 0 0118.042 5.637c.308 1.354-.278 2.717-1.925 3.827zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/></symbol>
+    <symbol id="i-users" viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></symbol>
   </svg>
 
-  <!-- FULL SCREEN ALERT -->
   <div id="bigAlert" class="new-order-alert">
     <div>NEW ORDER!</div>
     <small>Check the portal now!</small>
@@ -151,18 +158,20 @@
       <button class="filter-btn" data-filter="delivered">Delivered</button>
       <button class="filter-btn" data-filter="cancelled">Cancelled</button>
       <button class="filter-btn" data-filter="all">All Orders</button>
+      <button class="filter-btn" data-filter="users">Users</button>
     </div>
 
     <div id="loading">
       <div class="loader"></div>
-      <p style="text-align:center; color:#94a3b8;">Loading orders...</p>
+      <p style="text-align:center; color:#94a3b8;">Loading...</p>
     </div>
 
     <div id="orders-container"></div>
+    <div id="users-container" style="display:none;"></div>
 
     <div id="empty" class="empty hidden">
       <svg class="icon"><use href="#i-truck"/></svg>
-      <p>No orders in this category right now.</p>
+      <p>No items in this section right now.</p>
     </div>
 
     <div style="text-align:center; color:#64748b; font-size:0.85rem; margin-top:2rem;">
@@ -170,19 +179,20 @@
     </div>
   </div>
 
-  <!-- LOUD ALARM SOUND (free & loud) -->
   <audio id="loudSound" src="https://assets.mixkit.co/sfx/preview/mixkit-alarm-digital-clock-beep-989.mp3" preload="auto"></audio>
 
   <script>
     const API_BASE = window.location.origin;
-    const REFRESH_INTERVAL = 5000; // 5 seconds
+    const REFRESH_INTERVAL = 5000;
     let allOrders = [];
+    let allUsers = [];
     let currentFilter = 'active';
     let previousPendingCount = 0;
 
     const $ = s => document.querySelector(s);
     const $$ = s => document.querySelectorAll(s);
     const ordersContainer = $('#orders-container');
+    const usersContainer = $('#users-container');
     const loadingEl = $('#loading');
     const emptyEl = $('#empty');
     const bigAlert = $('#bigAlert');
@@ -190,61 +200,83 @@
 
     const icon = name => `<svg class="icon"><use href="#i-${name}"/></svg>`;
 
-    const badge = status => ({
-      pending: '<span class="badge badge-pending">Pending</span>',
-      confirmed: '<span class="badge badge-confirmed">Confirmed</span>',
-      delivered: '<span class="badge badge-delivered">Delivered</span>',
-      cancelled: '<span class="badge badge-cancelled">Cancelled</span>'
-    }[status] || '<span class="badge badge-pending">Pending</span>');
+    const welcomeMessage = encodeURIComponent(`🌟 Welcome to Chatpoint! 🌟
+Thank you for choosing us! 😊
+✅ Our services are 100% end-to-end safe, super fast & genuine
+✅ Trusted by 100+ happy people
+✅ Successfully serving 150+ customers and growing! 🎉
+Special Launch Offer for You! 🔥
+🛒 Order above ₹250 → Get 1000ml bottle FREE! 🆓
+🚚 Order above ₹69 → FREE Delivery (No delivery charges)
+💰 Order above ₹49 → No GST + No handling fee
+🎁 Extra 5% OFF on ALL items!
+Shop now 👉 chatpoint.shop
+Hurry, offer valid for limited time! ⏳
+Team Chatpoint ❤️`);
+
+    function sendWhatsApp(phone) {
+      if (!phone) return alert("No phone number available");
+      let cleaned = phone.replace(/\D/g, '');
+      if (cleaned.startsWith('0')) cleaned = '91' + cleaned.slice(1);
+      else if (!cleaned.startsWith('91')) cleaned = '91' + cleaned;
+      const url = `https://wa.me/${cleaned}?text=${welcomeMessage}`;
+      window.open(url, '_blank');
+    }
 
     const showBigAlert = () => {
       bigAlert.style.display = 'flex';
       loudSound.currentTime = 0;
       loudSound.volume = 1.0;
       loudSound.play();
-
-      setTimeout(() => {
-        bigAlert.style.display = 'none';
-      }, 10000); // auto hide after 10 seconds
+      setTimeout(() => { bigAlert.style.display = 'none'; }, 10000);
     };
 
-    const renderCard = order => {
+    const renderOrderCard = order => {
       const itemsHtml = order.items.map(i => `
-        <div class="flex justify-between text-sm text-gray-300 mt-1">
+        <div style="display:flex; justify-content:space-between; font-size:0.9rem; color:#cbd5e1; margin-top:0.4rem;">
           <span>${i.name} × ${i.quantity}</span>
           <span>₹${(i.price * i.quantity).toFixed(2)}</span>
         </div>`).join('');
 
       let actions = '';
       if (order.status === 'pending') {
-        actions = `<div class="flex gap-2 mt-4 flex-wrap">
+        actions = `<div style="display:flex; gap:0.5rem; margin-top:1rem; flex-wrap:wrap;">
           <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">Confirm</button>
           <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
           <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
         </div>`;
       } else if (order.status === 'confirmed') {
-        actions = `<div class="flex gap-2 mt-4 flex-wrap">
+        actions = `<div style="display:flex; gap:0.5rem; margin-top:1rem; flex-wrap:wrap;">
           <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
           <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
         </div>`;
       }
 
+      const canSendWelcome = ['pending', 'confirmed'].includes(order.status);
+
       return `
-        <div class="card" data-status="${order.status}" data-id="${order._id}">
-          <div class="flex justify-between items-start mb-3">
+        <div class="card" data-status="${order.status}">
+          <div style="display:flex; justify-content:space-between; align-items:start; margin-bottom:0.8rem;">
             <div>
-              <strong class="text-lg">Order #${order._id.slice(-6)}</strong>
-              <span class="ml-2 text-xs text-gray-500">${new Date(order.date).toLocaleString()}</span>
+              <strong style="font-size:1.1rem;">Order #${order._id.slice(-6)}</strong>
+              <span style="margin-left:0.5rem; font-size:0.8rem; color:#94a3b8;">${new Date(order.date).toLocaleString()}</span>
             </div>
-            <div>${badge(order.status)}</div>
+            <div style="padding:0.3rem 0.8rem; border-radius:0.4rem; font-size:0.8rem; font-weight:700;">
+              ${order.status === 'pending' ? '<span style="background:#451a03;color:#fcd34d;padding:0.3rem 0.8rem;border-radius:0.4rem;">Pending</span>' :
+                order.status === 'confirmed' ? '<span style="background:var(--confirmed);color:var(--confirmed-light);padding:0.3rem 0.8rem;border-radius:0.4rem;">Confirmed</span>' :
+                order.status === 'delivered' ? '<span style="background:#064e3b;color:#6ee7b7;padding:0.3rem 0.8rem;border-radius:0.4rem;">Delivered</span>' :
+                '<span style="background:#7f1d1d;color:#fca5a5;padding:0.3rem 0.8rem;border-radius:0.4rem;">Cancelled</span>'}
+            </div>
           </div>
-          <div class="space-y-2 text-sm">
-            <p><strong>Customer:</strong> ${order.user.name} (${order.user.phone})</p>
+          <div style="font-size:0.9rem; line-height:1.6;">
+            <p><strong>Customer:</strong> ${order.user.name} (${order.user.phone})
+              ${canSendWelcome ? ` <button class="btn btn-whatsapp" onclick="sendWhatsApp('${order.user.phone}')">${icon('whatsapp')} Send Welcome</button>` : ''}
+            </p>
             <p><strong>Address:</strong> ${order.address.line1}${order.address.line2 ? ', '+order.address.line2 : ''}</p>
             <p><strong>Shop:</strong> ${order.shop}</p>
           </div>
-          <div class="mt-3 space-y-1">${itemsHtml}</div>
-          <div class="flex justify-between font-bold text-xl mt-3 text-white">
+          <div style="margin-top:0.8rem;">${itemsHtml}</div>
+          <div style="display:flex; justify-content:space-between; font-weight:bold; font-size:1.25rem; margin-top:0.8rem; color:white;">
             <span>Grand Total</span>
             <span>₹${order.totalAmount.toFixed(2)}</span>
           </div>
@@ -252,41 +284,68 @@
         </div>`;
     };
 
-    const applyFilter = () => {
-      const cards = $$('.card');
-      let visible = 0;
-      cards.forEach(card => {
-        const status = card.dataset.status;
-        let show = currentFilter === 'all' ||
-                   (currentFilter === 'active' && ['pending','confirmed'].includes(status)) ||
-                   (currentFilter === status);
-        card.style.display = show ? '' : 'none';
-        if (show) visible++;
-      });
-      emptyEl.classList.toggle('hidden', visible > 0 || allOrders.length === 0);
+    const renderUsersList = () => {
+      if (allUsers.length === 0) {
+        return '<div class="empty"><p>No registered users found.</p></div>';
+      }
+      return allUsers.map((user, index) => `
+        <div class="user-card">
+          <div>
+            <strong>${index + 1}. ${user.name || 'N/A'}</strong><br>
+            <span style="color:#94a3b8;">${user.phone || 'No phone'}</span>
+          </div>
+          <button class="btn btn-whatsapp" onclick="sendWhatsApp('${user.phone}')">
+            ${icon('whatsapp')} Send Msg
+          </button>
+        </div>
+      `).join('');
     };
 
-    const renderAll = () => {
-      ordersContainer.innerHTML = allOrders.map(renderCard).join('');
-      applyFilter();
+    const applyView = () => {
+      if (currentFilter === 'users') {
+        ordersContainer.style.display = 'none';
+        usersContainer.style.display = 'block';
+        usersContainer.innerHTML = renderUsersList();
+        emptyEl.classList.toggle('hidden', allUsers.length > 0);
+      } else {
+        usersContainer.style.display = 'none';
+        ordersContainer.style.display = 'block';
+        ordersContainer.innerHTML = allOrders
+          .filter(order => {
+            if (currentFilter === 'all') return true;
+            if (currentFilter === 'active') return ['pending', 'confirmed'].includes(order.status);
+            return order.status === currentFilter;
+          })
+          .map(renderOrderCard)
+          .join('');
+        emptyEl.classList.toggle('hidden', allOrders.length > 0);
+      }
     };
 
-    const fetchOrders = async () => {
+    const fetchData = async () => {
       try {
-        const res = await fetch(`${API_BASE}/api/all-delivery-orders?t=${Date.now()}`, { cache: 'no-store' });
-        const data = await res.json();
+        const [ordersRes, usersRes] = await Promise.all([
+          fetch(`${API_BASE}/api/all-delivery-orders?t=${Date.now()}`, { cache: 'no-store' }),
+          fetch(`${API_BASE}/api/admin/users?t=${Date.now()}`, { cache: 'no-store' })
+        ]);
 
-        if (data.success && Array.isArray(data.orders)) {
-          const currentPending = data.orders.filter(o => o.status === 'pending').length;
+        const ordersData = await ordersRes.json();
+        const usersData = await usersRes.json();
 
+        if (ordersData.success && Array.isArray(ordersData.orders)) {
+          const currentPending = ordersData.orders.filter(o => o.status === 'pending').length;
           if (currentPending > previousPendingCount && currentPending > 0) {
-            showBigAlert(); // FULL SCREEN + LOUD SOUND
+            showBigAlert();
           }
           previousPendingCount = currentPending;
-
-          allOrders = data.orders;
-          renderAll();
+          allOrders = ordersData.orders;
         }
+
+        if (usersData.users && Array.isArray(usersData.users)) {
+          allUsers = usersData.users;
+        }
+
+        applyView();
       } catch (e) {
         console.error("Fetch error:", e);
       } finally {
@@ -294,24 +353,23 @@
       }
     };
 
-    // Filter buttons
+    // Tab switching
     document.querySelectorAll('.filter-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         document.querySelector('.filter-btn.active')?.classList.remove('active');
         btn.classList.add('active');
         currentFilter = btn.dataset.filter;
-        applyFilter();
+        applyView();
       });
     });
 
-    // Status update buttons
+    // Order status update
     ordersContainer.addEventListener('click', async e => {
       const btn = e.target.closest('button[data-action]');
       if (!btn || btn.disabled) return;
 
       const orderId = btn.dataset.id;
       const newStatus = btn.dataset.action;
-      const oldHTML = btn.innerHTML;
       btn.disabled = true;
       btn.innerHTML = 'Updating...';
 
@@ -325,12 +383,12 @@
         if (data.success) {
           const idx = allOrders.findIndex(o => o._id === data.order._id);
           if (idx !== -1) allOrders[idx] = data.order;
-          renderAll();
+          applyView();
         }
       } catch (err) {
         alert('Update failed');
-        btn.innerHTML = oldHTML;
         btn.disabled = false;
+        btn.innerHTML = ['confirmed','delivered','cancelled'].find(s => btn.classList.contains(`btn-${s === 'confirmed' ? 'primary' : s === 'delivered' ? 'success' : 'danger'}`)) || 'Action';
       }
     });
 
@@ -341,9 +399,9 @@
       }
     });
 
-    // Start auto-refresh every 5 seconds
-    fetchOrders();
-    setInterval(fetchOrders, REFRESH_INTERVAL);
+    // Initial load and auto-refresh
+    fetchData();
+    setInterval(fetchData, REFRESH_INTERVAL);
   </script>
 </body>
 </html>
